--- a/src/dynamic-fuel-system.csproj
+++ b/src/dynamic-fuel-system.csproj
@@ -7,7 +7,7 @@
     <AssemblyCompany>Landis-II-Foundation</AssemblyCompany>
     <AssemblyProduct>Landis.Extension.DynamicFuels-v3</AssemblyProduct>
     <AssemblyCopyright>Landis-II-Foundation</AssemblyCopyright>
-    <AssemblyVersion>3.0</AssemblyVersion>
+    <AssemblyVersion>3.0.2</AssemblyVersion>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/LANDIS-II-Foundation/Extension-Dynamic-Fuel-System</RepositoryUrl>
@@ -18,16 +18,16 @@
     <Authors>Landis-II-Foundation</Authors>
     <Product>Landis.Extension.DynamicFuels-v3</Product>
     <Copyright>Landis-II-Foundation</Copyright>
-    <Version>3.0</Version>
+    <Version>3.0.2</Version>
     <PackageTags>LANDIS-II;Landis;Extension;fire; fuels</PackageTags>
     <Description>Dynamic Fuel System for LANDIS-II</Description>
     <PackageReleaseNotes></PackageReleaseNotes>
-    <FileVersion>3.0.0.0</FileVersion>
+    <FileVersion>3.0.2</FileVersion>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>C:\BRM\LANDIS_II\GitCode\brmiranda\Core-Model-v7\Tool-Console\src\bin\extensions</OutputPath>
-    <!--<OutputPath>bin\Debug\</OutputPath>-->
+    <!--<OutputPath>C:\BRM\LANDIS_II\GitCode\brmiranda\Core-Model-v7\Tool-Console\src\bin\extensions</OutputPath>-->
+    <OutputPath>bin\Debug\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Landis.Core" Version="2.0.0" />
